# context_pilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  deploy_hybrid.ps1  docker-compose.yml  entrypoint.sh  entrypoint_knowledge.sh  err.txt  pyproject.toml  rag_error.txt  requirements.txt  start_adk_debug.ps1  start_knowledge_expert.ps1  start_main_agent.ps1  start_planning_expert_server.ps1  start_repo_explorer_server.ps1  start_ui_debug.ps1  start_web_debug.ps1  start_web_deploy.ps1  start_windows_test_env.ps1  test_case.jsonl  test_knowledge_output3.txt  test_output.txt
.agents/skills/context_pilot/: SKILL.md
agents/: command_line.py
agents/bug_analyze_agent/: agent.py
agents/bug_analyze_agent/tools/: __init__.py
bug_sleuth/: agent.py  application.py  cli.py  main.py  prompt.py  server.py  server_legacy.py  services.py  skill_loader.py  tools.py
bug_sleuth/agents/: config.example.yaml
bug_sleuth/agents/bug_analyze_agent/: agent.py  prompt.py
bug_sleuth/agents/shared_libraries/: state_keys.py
bug_sleuth/bug_analyze_agent/: agent.py  prompt.py
bug_sleuth/bug_analyze_agent/sub_agents/: log_analyst.py  tools.py
bug_sleuth/bug_analyze_agent/tools/: __init__.py  decorators.py  git.py  plan.py  search_code.py  search_res.py  utils.py
bug_sleuth/bug_report_agent/: agent.py  prompt.py
bug_sleuth/bug_scene_app/: __init__.py  agent.py  app.py  llama_rag_tool.py  prompt.py  services.py  tools.py
bug_sleuth/bug_scene_app/bug_analyze_agent/: __init__.py  agent.py  prompt.py
bug_sleuth/repo_index_tool/: __init__.py
bug_sleuth/shared_libraries/: constants.py  state_keys.py  tool_response.py  visual_llm_agent.py
bug_sleuth/test_utils/: test_client.py
bug_sleuth/testing/: test_client.py
context_pilot/: api_routes.py  main.py
context_pilot/context_pilot_app/: .env.example  agent.json  agent.py  app.py  llama_rag_tool.py  prompt.py  tools.py
context_pilot/scripts/: build_index.py  rag_config.py  run_auto_index.py
context_pilot/shared_libraries/: __init__.py  config_utils.py  constants.py  state_keys.py  tool_response.py
context_pilot/skill_library/: extensions.py  skill_loader.py
context_pilot/testing/: __init__.py  api_client.py  test_client.py
context_pilot/utils/: db_manager.py
data/: adk_a2a_event_streaming_investigation.md  knowledge_base.jsonl  knowledge_base.sqlite
frontend/src/app/: globals.css  (+2 more)
runner_test/: test_git_blame.py
scripts/: build_index.py  debug_gemini_sdk.py  inspect_index_dim.py  rag_config.py  rag_sync.py  reset_index.py  verify_new_arch.py
test/: README.md  conftest.py  manual_a2a_streaming_test.py
test/deploy/: conftest.py  manual_streaming_context_pilot.py  manual_streaming_integration.py  manual_streaming_knowledge_agent.py
test/integration/: test_bug_analyze_flow.py  test_bug_analyze_tool_flow.py  test_bug_report_flow.py  test_bug_sleuth_flow.py  test_context_pilot_plan.py  test_hitl_flow.py  test_hitl_http_wip.py  test_knowledge_tool_flow.py  test_plan_tool_flow.py  test_planning_expert_agent.py  test_rag_reproduce.py  test_repo_index.py
test/unit/: manual_a2a_streaming_test.py  test_knowledge_db.py  test_knowledge_integration.py  test_knowledge_tool.py  test_knowledge_tool_flow.py  test_rag_tool_live.py
tests/: README.md  conftest.py
tests/integration/: test_bug_analyze_flow.py  test_bug_sleuth_flow.py
(+69 files in other folders)
