[project]
name = "bug-sleuth"
version = "0.1.0"
description = "Bug Sleuth Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.20.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "aiosqlite>=0.21.0",
    "sqlalchemy>=2.0.41",
    "requests>=2.32.4",
    "httpx>=0.28.1",
    "google-cloud-aiplatform>=1.129.0",
    "google-genai>=1.53.0",
    "opentelemetry-api>=1.37.0",
    "a2a-sdk>=0.1.0",
    "PyYAML>=6.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "tree-sitter>=0.20.0",
    "tree-sitter-c-sharp>=0.20.0",
    "ag-ui-adk>=0.4.1",
    "google-cloud-storage>=2.14.0",
    "google-cloud-secret-manager>=2.22.0",
    "pinecone>=3.0.0",
]

[project.scripts]
bug-sleuth = "bug_sleuth.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["bug_sleuth"]

# No explicit sources mapping needed for standard layout

[tool.hatch.build.targets.sdist]
include = [
    "bug_sleuth",
    "pyproject.toml",
    "README.md"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]


